Fix T42531: Setting 'Undo' steps to '1' causes weirdness.

Do not allow '1' value here, it's useless.

Thanks to Campbell for suggested solution here!